overflow fixed

--- a/src/app/home.module.css
+++ b/src/app/home.module.css
@@ -1,6 +1,10 @@
 .layout{
     display: flex;
-    align-items: stretch;
+    padding: 0px 90px;
+    justify-content: space-between;
+    align-items: center;
+
+    height: inherit;
 }
 
 .img{
